[project]
name = "astar"
version = "0.1.0"
description = ""
authors = [
    {name = "Alice Victorino, Erick Justino"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "osmnx (>=2.0.6,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "networkx (>=3.5,<4.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "jupyterlab (>=4.4.10,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


